--- a/index.html
+++ b/index.html
@@ -55,17 +55,12 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Link</a></li>
                 <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                      </ul>
-                </li>
+				  <a href="/products/" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
+				  <ul class="dropdown-menu">
+					<li><a href="/products/">All Products</a></li>
+					<li><a href="/products/rdfframework/index.html">RdfFramework</a></li>
+				  </ul>
+				</li> 
                 <li class="dropdown">
                 	<a href="/presentations/" class="dropdown-toggle" data-toggle="dropdown">Presentations <b class="caret"></b></a>
 				  <ul class="dropdown-menu">
@@ -77,22 +72,17 @@
                     <a href="javascript:void(0);" data-toggle="search" class="hidden-xs"><i class="fa fa-search"></i></a>
                 </li>
               </ul>
-               <form class="navbar-form navbar-left navbar-search-form" role="search">                  
-                 <div class="form-group">
-                      <input type="text" value="" class="form-control" placeholder="Search...">
-                 </div> 
-              </form>
               <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Register</a></li>
+                   <!-- <li><a href="#">Register</a></li>
                     
-                    <li><button href="#" class="btn btn-round btn-default">Sign in</button></li>
+                    <li><button href="#" class="btn btn-round btn-default">Sign in</button></li>-->
                </ul>
               
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
      <div class="blurred-container">
-            <div class="img-src" style="background-image: url('assets/img/bg.jpg')"></div>
+            <div class="img-src" style="background-image: url('/images/bg.jpg')"></div>
         </div>
     </div><!--  end navbar -->
 
