--- a/index.html
+++ b/index.html
@@ -90,9 +90,21 @@
 
 <div class="main">
     <div class="container tim-container" style="max-width:800px; padding-top:100px">
-       <h1 class="text-center">KnowledgeLinks.io<br><small >Next generation library solutions</small></h1>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>      
+       <img src="/images/kl-logo.svg" style="height:150px"><h1 class="text-center">KnowledgeLinks.io<br>
+       <small >Next generation library solutions</small></h1>
+       <p> At KnowledgeLinks we are working on developing the nect gerneration of library solutions. 
+       	We are using are low cost open source technology to bring you a linked data platform that brings
+       	your library to your patron's phone, tablet and home computer.
+       	</p>
+       <h2>Coming this Summer! <strong>BIBCAT 2.0</strong></h2>
+       <p>Last year, in conjuction with the U.S. Library of Congress, we developed 
+       	   the first library catalog based on the BIBFRAME linked data vocabulary. 
+       	   This was a <strong>proop-of-concept</strong> designed to test a range of 
+       	   open source technologies. Mainly focusing on a robust low cost server core.
+       </p>
+       <p>BIBCAT 2.0 will be a beta version focusing on a middleware solution to optimize
+       	data-deduplication and indexing. As well as an improved front-end design.</p>
+       	   
            <!--     end extras -->        
     </div>
     <div class="space"></div>
