--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 </div> <!-- end menu-dropdown -->
 
 <div class="main">
-    <div class="container tim-container" style="max-width:800px; padding-top:100px">
-       <img src="/images/kl-logo.svg" style="height:150px"><h1 class="text-center">KnowledgeLinks.io<br>
+    <div class="container tim-container" style="max-width:800px;">
+       <img src="/images/kl-logo.svg" style="height:150px; padding:20px 0px 0px 40px"><h1 class="text-center">KnowledgeLinks.io<br>
        <small >Next generation library solutions</small></h1>
-       <p> At KnowledgeLinks we are working on developing the nect gerneration of library solutions. 
-       	We are using are low cost open source technology to bring you a linked data platform that brings
+       <p> At KnowledgeLinks we are developing the next gerneration of library solutions. 
+       	We are using low cost open source technologies to bring you a linked data platform that takes
        	your library to your patron's phone, tablet and home computer.
        	</p>
        <h2>Coming this Summer! <strong>BIBCAT 2.0</strong></h2>
