--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <div class="main">
     <div class="container tim-container" style="max-width:800px;">
-       <img src="/images/kl-logo.svg" style="height:150px; padding:20px 0px 0px 40px"><h1 class="text-center">KnowledgeLinks.io<br>
+       <img src="/images/kl-logo.svg" style="height:150px; float:left; padding:20px 0px 0px 40px"><h1 class="text-center">KnowledgeLinks.io<br>
        <small >Next generation library solutions</small></h1>
        <p> At KnowledgeLinks we are developing the next gerneration of library solutions. 
        	We are using low cost open source technologies to bring you a linked data platform that takes
