--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">GSDKit</a>
+              <a class="navbar-brand" href="/">KnowledgeLinks.io</a>
             </div>
         
             <!-- Collect the nav links, forms, and other content for toggling -->
