--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/">KnowledgeLinks.io</a>
+              <a class="navbar-brand" href="/">
+              	<img src="/images/kl-logo.svg" style="height:45px;margin:-20px 0px -20px 0px">
+              </a>
             </div>
         
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -90,7 +92,7 @@
 
 <div class="main">
     <div class="container tim-container" style="max-width:800px;">
-       <img src="/images/kl-logo.svg" style="height:150px; float:left; padding:20px 0px 0px 40px"><h1 class="text-center">KnowledgeLinks.io<br>
+       <h1 class="text-center">KnowledgeLinks.io<br>
        <small >Next generation library solutions</small></h1>
        <p> At KnowledgeLinks we are developing the next gerneration of library solutions. 
        	We are using low cost open source technologies to bring you a linked data platform that takes
