--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="/">
-              	<img src="/images/kl-logo.svg" style="height:45px;margin:-20px 0px -20px 0px">
+              	<!--<img src="/images/kl-logo.svg" style="height:45px;margin:-20px 0px -20px 0px">-->
+              	KL.io
               </a>
             </div>
         
