--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
        	We are using low cost open source technologies to bring you a linked data platform that takes
        	your library to your patron's phone, tablet and home computer.
        	</p>
-       <h2>Coming this Summer! <strong>BIBCAT 2.0</strong></h2>
+       <!--<h2>Coming this Summer! <strong>BIBCAT 2.0</strong></h2>-->
        <p>Last year, in conjuction with the U.S. Library of Congress, we developed 
        	   the first library catalog based on the BIBFRAME linked data vocabulary. 
        	   This was a <strong>proop-of-concept</strong> designed to test a range of 
