--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
        	We are using low cost open source technologies to bring you a linked data platform that takes
        	your library to your patron's phone, tablet and home computer.
        	</p>
-       <!--<h2>Coming this Summer! <strong>BIBCAT 2.0</strong></h2>-->
+       <!--<h2>Coming this Summer! <strong>BIBCAT 2.0</strong></h2>
        <p>Last year, in conjuction with the U.S. Library of Congress, we developed 
        	   the first library catalog based on the BIBFRAME linked data vocabulary. 
        	   This was a <strong>proop-of-concept</strong> designed to test a range of 
        	   open source technologies. Mainly focusing on a robust low cost server core.
        </p>
        <p>BIBCAT 2.0 will be a beta version focusing on a middleware solution to optimize
-       	data-deduplication and indexing. As well as an improved front-end design.</p>
+       	data-deduplication and indexing. As well as an improved front-end design.</p>-->
        	   
            <!--     end extras -->        
     </div>
