--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <div class="main">
     <div class="container tim-container" style="max-width:800px; padding-top:100px">
-       <h1 class="text-center">KnowledgeLinks.io<br>
+       <h1 class="text-center">Knowle<br>
        <!--<small >Next generation library solutions</small>-->
        </h1>
        <p> At KnowledgeLinks we are developing the next gerneration of library solutions. 
