--- a/index.html
+++ b/index.html
@@ -94,20 +94,20 @@
 <div class="main">
     <div class="container tim-container" style="max-width:800px; padding-top:100px">
        <h1 class="text-center">Knowle<br>
-       <!--<small >Next generation library solutions</small>-->
+       	<small >Next generation library solutions</small>
        </h1>
        <p> At KnowledgeLinks we are developing the next gerneration of library solutions. 
        	We are using low cost open source technologies to bring you a linked data platform that takes
        	your library to your patron's phone, tablet and home computer.
        	</p>
-       <!--<h2>Coming this Summer! <strong>BIBCAT 2.0</strong></h2>
+       <h2>Coming this Summer! <strong>BIBCAT 2.0</strong></h2>
        <p>Last year, in conjuction with the U.S. Library of Congress, we developed 
        	   the first library catalog based on the BIBFRAME linked data vocabulary. 
        	   This was a <strong>proop-of-concept</strong> designed to test a range of 
        	   open source technologies. Mainly focusing on a robust low cost server core.
        </p>
        <p>BIBCAT 2.0 will be a beta version focusing on a middleware solution to optimize
-       	data-deduplication and indexing. As well as an improved front-end design.</p>-->
+       	data-deduplication and indexing. As well as an improved front-end design.</p>
        	   
            <!--     end extras -->        
     </div>
