--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
 <div class="main">
     <div class="container tim-container" style="max-width:800px; padding-top:100px">
-       <h1 class="text-center">Knowle<br>
+       <h2 class="text-center">KnowledgeLinks.io<br>
        	<small >Next generation library solutions</small>
-       </h1>
+       </h2>
        <p> At KnowledgeLinks we are developing the next gerneration of library solutions. 
        	We are using low cost open source technologies to bring you a linked data platform that takes
        	your library to your patron's phone, tablet and home computer.
