--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="/">
-              	<img src="/images/kl-logo.svg" style="height:55px;margin:-20px 0px -20px 0px">
+              	KnowledgeLinks.io
               </a>
             </div>
         
@@ -92,6 +92,7 @@
 
 <div class="main">
     <div class="container tim-container" style="max-width:800px;">
+       <img src="/images/kl-logo.svg" style="height:155px;float:left; margin:20px 0px 0px 40px">
        <h2 class="text-center">KnowledgeLinks.io<br>
        	<small >Next generation library solutions</small>
        </h2>
