--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
 <div class="main">
     <div class="container tim-container" style="max-width:800px;">
-       <img src="/images/kl-logo.svg" style="height:155px;float:left; margin:20px 0px 0px 40px">
+       <div><img src="/images/kl-logo.svg" style="height:155px;float:left; margin:20px 0px 0px 40px">
        <h2 class="text-center">KnowledgeLinks.io<br>
        	<small >Next generation library solutions</small>
-       </h2>
+       </h2></div>
        <p> At KnowledgeLinks we are developing the next gerneration of library solutions. 
        	We are using low cost open source technologies to bring you a linked data platform that takes
        	your library to your patron's phone, tablet and home computer.
