--- a/index.html
+++ b/index.html
@@ -91,15 +91,19 @@
 </div> <!-- end menu-dropdown -->
 
 <div class="main">
-    <div class="container tim-container" style="max-width:800px;">
-       <div><img src="/images/kl-logo.svg" style="height:155px;float:left; margin:20px 0px 0px 40px">
-       <h2 class="text-center">KnowledgeLinks.io<br>
-       	<small >Next generation library solutions</small>
-       </h2></div>
+    <div class="container tim-container">
+       <div class="container" style="max-width:800px;">
+			<img src="/images/kl-logo.svg" style="height:155px;float:left; margin:20px 0px 0px 40px">
+			<h2 class="text-center">KnowledgeLinks.io<br>
+				<small >Next generation library solutions</small>
+			</h2>
+       </div>
+       <hr>
        <p> At KnowledgeLinks we are developing the next gerneration of library solutions. 
        	We are using low cost open source technologies to bring you a linked data platform that takes
        	your library to your patron's phone, tablet and home computer.
        	</p>
+       <hr>
        <h2 class="text-center">Coming this Summer! <strong>BIBCAT 2.0</strong></h2>
        <p>Last year, in conjuction with the U.S. Library of Congress, we developed 
        	   the first library catalog based on the BIBFRAME linked data vocabulary. 
