--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 				  </ul>
 				</li> 
                 <li class="dropdown">
-                	<a href="/presentations/" class="dropdown-toggle" data-toggle="dropdown">Presentations <b class="caret"></b></a>
+                	<a href="#presentations" class="dropdown-toggle" data-toggle="dropdown">Presentations <b class="caret"></b></a>
 				  <ul class="dropdown-menu">
-					<li><a href="/presentations/">All Presentations</a></li>
+					<li><a href="#presentations">All Presentations</a></li>
 					<li><a href="/presentations/niso-2015/index.html">NISO - The Semantic Web: What's New and Cool</a></li>
 				  </ul>
 				</li>
