--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li class="dropdown">
 				  <a href="/products/" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
 				  <ul class="dropdown-menu">
-					<li><a href="/products/">All Products</a></li>
+					<li><a href="#products">All Products</a></li>
 					<li><a href="/products/rdfframework/index.html">RdfFramework</a></li>
 				  </ul>
 				</li> 
