--- a/presentations.html
+++ b/presentations.html
@@ -1,6 +1,7 @@
 <div class="main">
     <div class="container tim-container">
-		<ul class="lead">
+    	<h2>Presentions</h2>
+		<ul>
 		  <li><a href="niso-2015/index.html">NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool</a></li>
 		</ul>
 	</div>
