--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link</a></li>
                 <li class="dropdown">
-				  <a href="/products/" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
+				  <a href="#products" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
 				  <ul class="dropdown-menu">
 					<li><a href="#products">All Products</a></li>
 					<li><a href="/products/rdfframework/index.html">RdfFramework</a></li>
@@ -70,9 +69,6 @@
 					<li><a href="/presentations/niso-2015/index.html">NISO - The Semantic Web: What's New and Cool</a></li>
 				  </ul>
 				</li>
-                <li>
-                    <a href="javascript:void(0);" data-toggle="search" class="hidden-xs"><i class="fa fa-search"></i></a>
-                </li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                    <!-- <li><a href="#">Register</a></li>
