--- a/bibcat.html
+++ b/bibcat.html
@@ -11,7 +11,7 @@
          Library of Congress (original records were generated from MARC records related to the subjects, "Mark Twain" and "Bible").
   </p>
  </section>
- <section class="col-md-6">
+ <section class="col-md-6" style="overflow:hidden">
    <img src="/images/bibcat-v.5.png" class="img-thumbnail">
  </section>
 </div>
