--- a/bibcat.html
+++ b/bibcat.html
@@ -20,7 +20,7 @@
 <p class="lead">Single Page App, Docker Environment, &amp; Kibana Reporting and Visualization</p>
 <h3><a href="http://bibcat.org" >Current BIBCAT</a></h3>
 <h3>Docker Environment</h3>
-<div style="overflow:hidden">
+<div style="overflow:overlay">
 <img src="/images/semantic-server-docker-env.svg" style="width:500px;height:auto">
 </div>
 
