--- a/products.html
+++ b/products.html
@@ -1,7 +1,7 @@
 <div class="main">
     <div class="container tim-container">
     	<h1>Products</h1>
-		<h2>BIBCAT</h2>
+		<h2><a href="#bibcat">BIBCAT</a></h2>
 		<p>A linked data Library Catalog based on the BIBFRAME vovabulary</p>
 		<h2>Open Badge Issuer</h2>
 		<p>Become an issuer of openbadges. This allows you to award students for 
