--- a/presentations.html
+++ b/presentations.html
@@ -2,7 +2,7 @@
     <div class="container tim-container">
     	<h2>Presentions</h2>
 		<ul>
-		  <li><a href="niso-2015/index.html">NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool</a></li>
+		  <li><a href="/presentations/niso-2015/index.html">NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool</a></li>
 		</ul>
 	</div>
 </div>
