Copyedit to products

--- a/products.html
+++ b/products.html
@@ -1,16 +1,26 @@
 <div class="main">
     <div class="container tim-container">
-    	<h1>Products</h1>
+    	<h1>Products &amp; Services</h1>
 		<h2>BIBCAT</h2>
-		<p>A linked data Library Catalog based on the BIBFRAME vovabulary</p>
+		<p>A linked data Library Catalog based on the BIBFRAME vocabulary.
+                 </p>
 		<h2>Open Badge Issuer</h2>
-		<p>Become an issuer of openbadges. This allows you to award students for 
-			their work in any setting</p>
+		<p>Become an issuer of <a href="http://openbadges.org/">Openbadges</a>. 
+                   Award students for their accomplishments in a portable, online 
+                   environment.
+                </p>
 		<h2>RdfFramework</h2>
-		<p>The middleware solution for our our solution.</p>
+		<p>Our open-source middleware solution for managing your knowledge graphs.</p>
+                <ul>
+                    <li>Model your data once in RDF and automatically generate HTML management forms</li>
+                    <li>Provide APIs for your data</li>
+                    <li><a class="btn btn-primary" 
+                         href="/products/rdfframework/index.html">Developer Documentation</a></li>
+                </ul>
 		<h2>Semantic Server-Core</h2>
-		<p>A complete server stack that contains a RDF triplestore, Digital Repsoitory,
-			Full-text serach engine and application server.</p>
+		<p>A complete server stack that contains a RDF triplestore, Digital Repository,
+		   Full-text searching,  and application server.
+                </p>
 	</div>
 </div>
 
