--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				  <a href="#products" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
 				  <ul class="dropdown-menu">
 					<li><a href="#products" class='dropdown-toggle'>All Products</a></li>
-					<li><a href="#bibcat" class='dropdown-toggle'>BIBCAT</a></li>
+					<li><a href="#products/bibcat" class='dropdown-toggle'>BIBCAT</a></li>
 					<li><a href="/products/rdfframework/index.html" class='dropdown-toggle'>RdfFramework</a></li>
 				  </ul>
 				</li> 
