--- a/home.html
+++ b/home.html
@@ -7,11 +7,24 @@
 			</h2>
        </div>
        <hr>
-       <p> At KnowledgeLinks we are developing the next gerneration of library solutions. 
-       	We are using low cost open source technologies to bring you a linked data platform that takes
+       <p>At KnowledgeLinks we are developing the next gerneration of library solutions. 
+       	Using low cost open source technologies to make a <strong>linked data</strong> platform to bring
        	your library to your patron's phone, tablet and home computer.
        	</p>
-       
+       <h2 class="text-center">Why <strong>Linked Data</strong>?</h2>
+       <hr>
+       <p>Linked Data is how to connect your library to the internet. The old
+       	MARC records provide no real relationship to an information outside of your
+       	catalog. Linked Data allows your to enhance your catalog and patron 
+       	experience to something that they are more familiar. There is too much
+       	information alreay available via linked data that a single group of catalogers
+       	can't keep up. Linke data allows you to pull information that you want from 
+       	acrosss the web into the catalog.</p>
+       <h2 class="text-center">Cataloger of the Future!</h2>
+       <hr>	
+       <p>Our platform will allow catalogers to escape the world of data entry. Instead they
+       	will be more concerned in searching and organizing information so that their patron's
+       	can quickly find what they need.</p>
        <h2 class="text-center">Coming this Summer! <strong>BIBCAT 2.0</strong></h2>
        <hr>
        <p>Last year, in conjuction with the U.S. Library of Congress, we developed 
