--- a/products/index.html
+++ b/products/index.html
@@ -1,7 +1,7 @@
 <div class="main">
     <div class="container tim-container">
     	<h1>Products &amp; Services</h1>
-		<h2><a href="#products/bibcat">BIBCAT</a></h2>
+		<h2><a href="#/products/bibcat">BIBCAT</a></h2>
 		<p>A linked data Library Catalog based on the BIBFRAME vocabulary.
                  </p>
 		<h2>Open Badge Issuer</h2>
