--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                 <li class="dropdown">
 				  <a href="#products" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
 				  <ul class="dropdown-menu">
-					<li><a href="#products" class='dropdown-toggle'>All Products</a></li>
-					<li><a href="#products/bibcat" class='dropdown-toggle'>BIBCAT</a></li>
+					<li><a href="#/products" class='dropdown-toggle'>All Products</a></li>
+					<li><a href="#/products/bibcat" class='dropdown-toggle'>BIBCAT</a></li>
 					<li><a href="/products/rdfframework/index.html" class='dropdown-toggle'>RdfFramework</a></li>
 				  </ul>
 				</li> 
                 <li class="dropdown">
-                	<a href="#presentations" class="dropdown-toggle" data-toggle="dropdown">Presentations <b class="caret"></b></a>
+                	<a href="#/presentations" class="dropdown-toggle" data-toggle="dropdown">Presentations <b class="caret"></b></a>
 				  <ul class="dropdown-menu">
-					<li><a href="#presentations" class='dropdown-toggle'>All Presentations</a></li>
+					<li><a href="#/presentations" class='dropdown-toggle'>All Presentations</a></li>
 					<li><a href="/presentations/niso-2015/index.html" class='dropdown-toggle'>NISO - The Semantic Web: What's New and Cool</a></li>
 				  </ul>
 				</li>
