--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
        <h2 class="text-center">Why <strong>Linked Data</strong>?</h2>
        <hr>
        <p>Linked Data is how to connect your library to the internet. The old
-       	MARC records provide no real relationship to an information outside of your
-       	catalog. Linked Data allows your to enhance your catalog and patron 
+       	MARC records provide no relationships to any information outside of your
+       	catalog. Linked Data allows you to enhance your catalog and patron 
        	experience to something that they are more familiar. There is too much
        	information alreay available via linked data that a single group of catalogers
        	can't keep up. Linke data allows you to pull information that you want from 
