--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
        	catalog. Linked Data allows you to enhance your catalog and patron 
        	experience to something that they are more familiar. There is too much
        	information alreay available via linked data that a single group of catalogers
-       	can't keep up. Linke data allows you to pull information that you want from 
+       	can't keep up. Linked data allows you to pull the information that you want from 
        	acrosss the web into the catalog.</p>
        <h2 class="text-center">Cataloger of the Future!</h2>
        <hr>	
