--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				  <ul class="dropdown-menu">
 					<li><a href="#/products" class='dropdown-toggle'>All Products</a></li>
 					<li><a href="#/products/bibcat" class='dropdown-toggle'>BIBCAT</a></li>
-					<li><a href="/products/rdfframework/index.html" class='dropdown-toggle'>RdfFramework</a></li>
+					<li><a href="#/products/rdfframework" class='dropdown-toggle'>RdfFramework</a></li>
 				  </ul>
 				</li> 
                 <li class="dropdown">
