--- a/products/index.html
+++ b/products/index.html
@@ -9,7 +9,7 @@
                    Award students for their accomplishments in a portable, online 
                    environment.
                 </p>
-		<h2>RdfFramework</h2>
+		<h2><a href="#/products/rdfframework">RdfFramework</a></h2>
 		<p>Our open-source middleware solution for managing your knowledge graphs.</p>
                 <ul>
                     <li>Model your data once in RDF and automatically generate HTML management forms</li>
