--- a/home.html
+++ b/home.html
@@ -8,29 +8,25 @@
        </div>
        <hr>
        <p>At KnowledgeLinks we are developing the next gerneration of library solutions. 
-       	Using low cost open source technologies to make a <strong>linked data</strong> platform to bring
+       	Using low cost open source technologies to make a <strong>linked data</strong> platform bringing
        	your library to your patron's phone, tablet and home computer.
        	</p>
        <h2 class="text-center">Why <strong>Linked Data</strong>?</h2>
        <hr>
-       <p>Linked Data is how to connect your library to the internet. The old
-       	MARC records provide no relationships to any information outside of your
-       	catalog. Linked Data allows you to enhance your catalog and patron 
-       	experience to something that they are more familiar. There is too much
-       	information alreay available via linked data that a single group of catalogers
-       	can't keep up. Linked data allows you to pull the information that you want from 
-       	acrosss the web into the catalog.</p>
+       <p>Linked Data is the premier method to efficiently connect your library to the internet. The old
+       	MARC records provide no logical relationship to information outside your
+       	catalog requiring slow arduous cataloger input. Linked Data allows you to enhance the catalog and patron interface experience to a simple digital platform the patron is familiar and comfortable with. Linked data allows you to pull the information you want from 
+       	acrosss the web logically, neatly, and efficiently into your catalog.</p>
        <h2 class="text-center">Cataloger of the Future!</h2>
        <hr>	
        <p>Our platform will allow catalogers to escape the world of data entry. Instead they
-       	will be more concerned in searching and organizing information so that their patron's
-       	can quickly find what they need.</p>
+       	will be solely concerned with searching and organizing their desired information providing an enhanced end product with minimal time and effort.</p>
        <h2 class="text-center">Coming this Summer! <strong>BIBCAT 2.0</strong></h2>
        <hr>
        <p>Last year, in conjuction with the U.S. Library of Congress, we developed 
        	   the first library catalog based on the BIBFRAME linked data vocabulary. 
-       	   This was a <strong>proop-of-concept</strong> designed to test a range of 
-       	   open source technologies. Mainly focusing on a robust low cost server core.
+       	   This was a <strong>proof-of-concept</strong> designed to test a range of 
+       	   open source technologies focusing on a robust low cost server core.
        </p>
        <p>BIBCAT 2.0 will be a beta version focusing on a middleware solution to optimize
        	data-deduplication and indexing. As well as an improved front-end design.</p>
