--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
        	   open source technologies focusing on a robust low cost server core.
        </p>
        <p>BIBCAT 2.0 will be a beta version focusing on a middleware solution to optimize
-       	data-deduplication and indexing. As well as an improved front-end design.</p>
+       	data-deduplication and indexing as well as an improved front-end design.</p>
        	   
            <!--     end extras -->        
     </div>
