--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
 					<li><a href="/presentations/niso-2015/index.html" class='dropdown-toggle'>NISO - The Semantic Web: What's New and Cool</a></li>
 				  </ul>
 				</li>
+		<li class="dropdown">
+			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Clients &amp; Use Cases<b class="caret"></b></a>
+				  <ul class="dropdown-menu">
+					  <li><a href="#/clients">Clients</a></li>
+					  <li><a href="#/clients/use-cases">Use Cases</a></li>
+				  </ul>
+				  </li>
+		<li><a href="#contact">Contact</a></li>
+		<li><a href="#about">About</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                    <!-- <li><a href="#">Register</a></li>
@@ -81,7 +90,16 @@
           </div><!-- /.container-fluid -->
         </nav>
      <div class="blurred-container">
-            <div class="img-src" style="background-image: url('/images/bg.jpg')"></div>
+            <div class="img-src" style="background-image: url('/images/bg.jpg')">
+		    <h1 style="color: white;margin-top: 3em; margin-left: 2em">Our Semantic Web technology&hellip;</h1>
+		    <h2 style="color: white; margin-left: 3em">
+			    <ul>
+			    <li>Links your Library's Catalog to the World</li> 
+	     		    <li>Powers your Digital Publishing Efforts</li>
+			    <li>Credentials your People with OpenBadge<sup>tm</sup></li>
+		    	    </ul>
+	     	    </h2>
+	    </div>
         </div>
     </div><!--  end navbar -->
 
