--- a/index.html
+++ b/index.html
@@ -77,30 +77,30 @@
 					  <li><a href="#/clients/use-cases">Use Cases</a></li>
 				  </ul>
 				  </li>
-		<li><a href="#contact">Contact</a></li>
-		<li><a href="#about">About</a></li>
+		
               </ul>
               <ul class="nav navbar-nav navbar-right">
-                   <!-- <li><a href="#">Register</a></li>
-                    
-                    <li><button href="#" class="btn btn-round btn-default">Sign in</button></li>-->
+              		<li><a href="#contact">Contact</a></li>
+					<li><a href="#about">About</a></li>
                </ul>
               
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
-     <div class="blurred-container">
-            <div class="img-src" style="background-image: url('/images/bg.jpg')">
-		    <h1 style="color: white;margin-top: 3em; margin-left: 2em">Our Semantic Web technology&hellip;</h1>
-		    <h2 style="color: white; margin-left: 3em">
-			    <ul>
-			    <li>Links your Library's Catalog to the World</li> 
-	     		    <li>Powers your Digital Publishing Efforts</li>
-			    <li>Credentials your People with OpenBadge<sup>tm</sup></li>
-		    	    </ul>
-	     	    </h2>
+	<div class="blurred-container">
+		<div class="img-src" style="background-image: url('/images/bg.jpg')">
+            <div class="hidden-xs">
+			    <h1 style="color: white;margin-top: 3em; margin-left: 2em">Our Semantic Web technology&hellip;</h1>
+			    <h2 style="color: white; margin-left: 3em">
+				    <ul>
+				    	<li>Links your Library's Catalog to the World</li> 
+		     		    <li>Powers your Digital Publishing Efforts</li>
+				    	<li>Credentials your People with OpenBadge<sup>tm</sup></li>
+					</ul>
+				</h2>
+			</div>
 	    </div>
-        </div>
+	</div>
     </div><!--  end navbar -->
 
 </div> <!-- end menu-dropdown -->
