--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li class="dropdown">
-				  <a href="#products" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
+				  <a href="#/products" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
 				  <ul class="dropdown-menu">
 					<li><a href="#/products" class='dropdown-toggle'>All Products</a></li>
 					<li><a href="#/products/bibcat" class='dropdown-toggle'>BIBCAT</a></li>
@@ -71,7 +71,7 @@
 				  </ul>
 				</li>
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Clients &amp; Use Cases<b class="caret"></b></a>
+					<a href="#/clients" class="dropdown-toggle" data-toggle="dropdown">Clients &amp; Use Cases<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><a href="#/clients">Clients</a></li>
 						<li><a href="#/clients/use-cases">Use Cases</a></li>
