--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,20 @@
 <div class="main">
-    <div class="container tim-container">
-       <h1>Contact us about our services</h1>
-       <hr>
-       <h2>Email</h2>
-       <hr>
-       <a href="mailto:knowledgelinks.io@gmail.com">knowledgelinks.io@gmail.com</a>
-       <hr>
-       <h2>Phone</h2>
-       <hr>
-       <p>+1-719-301-7017</p>
-               
-    </div>
-    <div class="space"></div>
+	<div class="container" style="max-width: 800px;overflow-wrap: break-word;">  
+		<div class="row">
+			<div class="col-md-11">
+				<h1>Contact Us</h1>
+			</div>
+		</div>
+		<hr>
+		<div class="row">
+			<div class="col-md-3"><h2>Email:</h2></div>
+			<div class="col-md-8"><h2><a href="mailto:knowledgelinks.io@gmail.com">knowledgelinks.io@gmail.com</a></h2></div>
+		</div>
+		<div class="row">
+			<div class="col-md-3"><h2>Phone:</h2></div>
+			<div class="col-md-8"><h2>+1-719-301-7017</h2></div>
+		</div>
+	<div class="space"></div>
 <!-- end container -->
 </div>
 <!-- end main -->
