added contact page

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-3"><h2>Phone:</h2></div>
-			<div class="col-md-8"><h2>+1-719-301-7017</h2></div>
+			<div class="col-md-8"><h2><a href="tel:+1-719-301-7017">+1-719-301-7017</a></h2></div>
 		</div>
 	<div class="space"></div>
 <!-- end container -->
