--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<p>We are a small IT startup providing integerated, modern, low-cost solutions for libraries. We want
 			libraries to use their budgets to improve their patron expriences while we improve their patron's
 			library systems experience.</p>
-		<h1>Whe are NOT!</h1>
+		<h1>Whe are <span class="text-danger">NOT!</span> </h1>
 		<p>We are <strong>NOT</strong> a company who will nickle and dime you!</p>
 		<div class="space"></div>
 	</div>
