--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <div class="main">
 	<div class="container">  
 		<h1>Who we are!</h1>
-		<p>We are a small IT startup providing integerated, modern, low-cost solutions for libraries. We want
+		<h2>We are a small IT startup providing integerated, modern, low-cost solutions for libraries. We want
 			libraries to use their budgets to improve their patron expriences while we improve their patron's
-			library systems experience.</p>
+			library systems experience.</h2>
 		<h1>Whe are <span class="text-danger">NOT!</span> </h1>
-		<p>We are <strong>NOT</strong> a company who will nickle and dime you!</p>
+		<h2>We are <strong>NOT</strong> a company that will nickle and dime you!</h2>
 		<div class="space"></div>
 	</div>
 <!-- end container -->
