added about page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link href="/bootstrap3/css/font-awesome.css" rel="stylesheet" />
 		<link href="/css/get-shit-done.css" rel="stylesheet" />  
 		<link href="/css/demo.css" rel="stylesheet" /> 
-
+		<link href="/css/kl.css" rel="stylesheet" /> 
 	    <!--     Font Awesome     -->
 	    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	    <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
