--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 		<h2>We are a small IT startup providing integerated, modern, low-cost solutions for libraries. We want
 			libraries to use their budgets to improve their patron expriences while we improve their patron's
 			library systems experience.</h2>
-		<h1>Whe are <span class="text-danger">NOT!</span> </h1>
+		<h1>What we are <span class="text-danger">NOT!</span> </h1>
 		<hr>
 		<h2>We are <strong>NOT</strong> a company that will nickle and dime you!</h2>
 		<div class="space"></div>
