--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 	<a href="#/presentations" class="dropdown-toggle" data-toggle="dropdown">Presentations <b class="caret"></b></a>
 				  <ul class="dropdown-menu">
 					<li><a href="#/presentations" class='dropdown-toggle'>All Presentations</a></li>
-					<li><a href="http://knowledgelinks.io/presentations/niso-2015/index.html" class='dropdown-toggle'>NISO - The Semantic Web: What's New and Cool</a></li>
+					<li><a href="/presentations/niso-2015/index.html" class='dropdown-toggle'>NISO - The Semantic Web: What's New and Cool</a></li>
 				  </ul>
 				</li>
 				<li class="dropdown">
