added bibcat resentation

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 				  <ul class="dropdown-menu">
 					<li><a href="#/presentations" class='dropdown-toggle'>All Presentations</a></li>
 					<li><a href="/presentations/niso-2015/index.html" class='dropdown-toggle'>NISO - The Semantic Web: What's New and Cool</a></li>
+					<li><a href="https://docs.google.com/presentation/d/1nUFI2CBWju1YZaM-a7-wlD0bQcIGzSVB1s0dzwm9-l0/present?slide=id.p4">BIBCAT 2.0</a></li>
 				  </ul>
 				</li>
 				<li class="dropdown">
