--- a/presentations/index.html
+++ b/presentations/index.html
@@ -3,6 +3,7 @@
     	<h2>Presentions</h2>
 		<ul>
 		  <li><a href="/presentations/niso-2015/index.html">NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool</a></li>
+		  <li><a href="https://docs.google.com/presentation/d/1nUFI2CBWju1YZaM-a7-wlD0bQcIGzSVB1s0dzwm9-l0/present?slide=id.p4">BIBCAT 2.0</a></li>
 		</ul>
 	</div>
 </div>
