added Code4Lib 2018 presentation

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
                 	<a href="#/presentations" class="dropdown-toggle" data-toggle="dropdown">Presentations <b class="caret"></b></a>
 				  <ul class="dropdown-menu">
 					<li><a href="#/presentations" class='dropdown-toggle'>All Presentations</a></li>
+                                        <li><a href="/presentations/code4lib-2018/index.html" 
+                                               class='dropdown-toggle'>Code4Lib 2018 Preconference</a></li>
 					<li><a href="/presentations/niso-2015/index.html" class='dropdown-toggle'>NISO - The Semantic Web: What's New and Cool</a></li>
 					<li><a href="https://docs.google.com/presentation/d/1nUFI2CBWju1YZaM-a7-wlD0bQcIGzSVB1s0dzwm9-l0/present?slide=id.p4">BIBCAT 2.0</a></li>
                                         <li><a href="/presentations/introduction-to-bibcat">Introduction to BIBCAT</a></li>
