--- a/presentations/index.html
+++ b/presentations/index.html
@@ -1,7 +1,8 @@
 <div class="main">
     <div class="container tim-container">
-    	<h2>Presentions</h2>
+    	<h2>Presentations</h2>
 		<ul>
+                  <li><a href="/presentations/code4lib-2018/index.html">Code4Lib 2018</a></li>
 		  <li><a href="/presentations/niso-2015/index.html">NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool</a></li>
 		  <li><a href="https://docs.google.com/presentation/d/1nUFI2CBWju1YZaM-a7-wlD0bQcIGzSVB1s0dzwm9-l0/present?slide=id.p4">BIBCAT 2.0</a></li>
                     <li><a href="/presentations/introduction-to-bibcat/index.html">Introduction to BIBCAT</a></li>
