updating presentation, added session text

--- a/presentations/code4lib-2018/index.html
+++ b/presentations/code4lib-2018/index.html
@@ -55,6 +55,9 @@
         <li><a href="https://bibcat.org/">BIBCAT Home</a></li>
         <li><a href="https://bibcat.org/introduction">Introduction to BIBCAT</a></li>
         <li><a href="http://knowledgelinks.io/">KnowledgeLinks.io</a></li>
+        <li>
+            <a href="static/txt/class-session.txt">Output from Class Exercises</a>
+        </li>
     </ul>
 
     </div>
@@ -78,8 +81,8 @@
         <h3 class="text-muted uk-text-center">Data Formats</h3>
         <ul>
             <li>RDF - Triples (XML, Turtle, N3 serializations</li>
-            <li><a href="#">MODS</a>, <a href="#">MARC</a>, 
-                <a href="#">Dublin Core</a>,  XML format</li>
+            <li><a href="http://www.loc.gov/standards/mods/">MODS</a>, <a href="https://www.loc.gov/marc/bibliographic/">MARC</a>, 
+                <a href="http://dublincore.org/">Dublin Core</a>,  XML format</li>
             <li>CSV - Comma Separated Value</li>
             <li>JSON - Feeds both incoming and outgoing</li>
         </uL>
@@ -119,10 +122,10 @@
         <ul>
             <li>Flask - Build HTML5 Applications using <a href="https://getbootstrap.com">Bootstrap</a>,
 <a href="https://jquery.com/">JQuery</a></li>
-            <li><a href="#">RDFLib</a></li>
-            <li><a href="#">lxml</a></li>
-            <li><a href="#">Pymarc</a></li>
-            <li><a href="#">bibcat</a></li>
+            <li><a href="https://rdflib.readthedocs.io/en/stable/">RDFLib</a></li>
+            <li><a href="http://lxml.de/">lxml</a></li>
+            <li><a href="https://github.com/edsu/pymarc">Pymarc</a></li>
+            <li><a href="https://bibcat.org/">bibcat</a></li>
     </div>
     <div>
         <img src="static/img/blazegraph-elasticsearch.png" class="uk-align-center">
@@ -144,7 +147,7 @@
         <h3 class="text-muted uk-text-center">Source Control, Packaging, and Deployment</h3>
         <ul>
             <li>
-                <a href="#">Git</a> and <a href="https://github.com/">Github</a>
+                <a href="https://git-scm.com/">Git</a> and <a href="https://github.com/">Github</a>
             </li>
             <li>Python Module Repository <a href="#">PyPi</a></li>
             <li><a href="https://docker.com/">Docker</a></li>
@@ -186,7 +189,7 @@
     </div>
     <div>
     <h2>BIBCAT RML Processors</h2>
-    <p>BIBCAT uses <a href="#">RDF Mapping Language</a> to preform
+    <p>BIBCAT uses <a href="http://rml.io/">RDF Mapping Language</a> to preform
      the following processing of incoming data to the final 
      RDF Linked Data output, stored either in triplestore or on 
      disk</p>
@@ -219,7 +222,7 @@
         </li> 
         <li>DP.LA Service Hubs, BIBCAT is used in the regional service
         hub for Colorado and Wyoming, generates a 
-        <a href="#">ResourceSync</a> XML feed linking 
+        <a href="http://www.openarchives.org/rs/toc">ResourceSync</a> XML feed linking 
         MAPv4 JSON-LD for inclusion in DP.LA</li>
         <li>JSON API for Kean University's Academic Concierge 
         iOS App</li>
