added Link to ALA 2018

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 	<a href="#/presentations" class="dropdown-toggle" data-toggle="dropdown">Presentations <b class="caret"></b></a>
 				  <ul class="dropdown-menu">
 					<li><a href="#/presentations" class='dropdown-toggle'>All Presentations</a></li>
+                                        <li><a href="/presentations/ala-2018/index.html">ALA 2018</a></li>
                                         <li><a href="/presentations/code4lib-2018/index.html" 
                                                class='dropdown-toggle'>Code4Lib 2018 Preconference</a></li>
 					<li><a href="/presentations/niso-2015/index.html" class='dropdown-toggle'>NISO - The Semantic Web: What's New and Cool</a></li>
