updated urls in ALA presentation

--- a/presentations/ala-2018/index.html
+++ b/presentations/ala-2018/index.html
@@ -32,7 +32,7 @@
             <h3>Technology</h3>
             <ul>
                 <li>Open-source modules
-                    <a href="#">bibcat</a> and <a href="#">rdfframework</a>
+                    <a href="https://github.com/KnowledgeLinks/bibcat">bibcat</a> and <a href="https://github.com/KnowledgeLinks/rdfframework">rdfframework</a>
                     developed by KnowledgeLinks.
                 </li>
                 <li>Metadata sources included <a href="https://islandora.ca/">Islandora</a>,
@@ -43,6 +43,8 @@
             </ul>
             <h3>Linked Data</h3>
             <ul>
+                <li>Uses <a href="http://rml.io/">RDF Mapping Language</a> 
+                to map input data to BIBFRAME RDF</li>
                 <li>Standardized on BIBFRAME 2.0</li>
                 <li>Output format to DP.LA's Metadata Application Profile 4.0 in JSON-LD</li>
             </ul>
